Fixed images size when view on mobile devices.

--- a/css/style.css
+++ b/css/style.css
@@ -43,10 +43,14 @@ hr {
     position: relative;
 
     background: url('../images/main-image.jpg') no-repeat center center fixed;
-    background-size: cover;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;    
+    -o-background-size: cover;
+    background-size: cover;
+    
+    min-height: 100%;
+    min-width: auto;
 }
 
 /* Navigation Bar */
@@ -207,6 +211,11 @@ hr {
     color: #e08000;
 }
 
+.private-chef-container img {
+    min-height: 100%;
+    min-width: auto;
+}
+
 /* How it work? */
 
 .instructions-container {
@@ -220,6 +229,8 @@ hr {
 .instructions-container img {
     margin: 35px;
     box-shadow: 0 5px 10px rgb(0 0 0 / 0.5);
+    min-height: auto;
+    min-width: auto;
 }
 
 .instructions-container p {
@@ -247,15 +258,21 @@ hr {
     position: relative;
 
     background: url('../images/noodle-bowl.jpg') no-repeat center center fixed;
-    background-size: cover;
+
     -webkit-background-size: cover;
     -moz-background-size: cover;
-    -o-background-size: cover;    
+    -o-background-size: cover;
+    background-size: cover;
+    
+    min-height: 100%;
+    min-width: auto;
 }
 
 .testimonials-container img {
     margin: 20px;
     box-shadow: 0 5px 10px rgb(0 0 0 / 0.5);
+    min-height: auto%;
+    min-width: auto;
 }
 
 /* Footer */
@@ -340,4 +357,3 @@ footer h1 {
     color: #fafafa;
     background: #e08000;
 }
-
